--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,7 +5,7 @@
 spring:
   datasource:
     # Docker MySQL 컨테이너 연결 (localhost:3306으로 포트 포워딩)
-    url: jdbc:mysql://localhost:3306/${MYSQL_DATABASE}
+    url: ${MYSQL_URL}
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -28,19 +28,6 @@ spring:
               database:
                 action: none
 
-  # Docker 컨테이너 서비스들 연결
-  data:
-    redis:
-      host: localhost
-      port: 6379
-      timeout: 2000ms
-
-    mongodb:
-      host: localhost
-      port: 27017
-      database: ${MONGO_DATABASE}
-      username: ${MONGO_ROOT_USERNAME}
-      password: ${MONGO_ROOT_PASSWORD}
 
 # 로컬 개발용 로깅 설정
 logging:
